--- a/index.html
+++ b/index.html
@@ -3,12 +3,117 @@
 <head>
   <meta charset="UTF-8">
   <title>Privacy Policy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 20px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1, h2 {
+      color: #222;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      background: #ffffff;
+      padding: 20px;
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    footer {
+      margin-top: 30px;
+      font-size: 0.9em;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
+
+<div class="container">
+
   <h1>Privacy Policy</h1>
+
+  <p><strong>Last updated:</strong> January 17, 2026</p>
+
   <p>
-    This application does not collect personal data.
-    It uses Google AdMob for advertising.
+    This Privacy Policy describes how <strong>[Your App Name]</strong> handles
+    information when you use our mobile application.
   </p>
+
+  <h2>Information Collection and Use</h2>
+  <p>
+    <strong>[Your App Name]</strong> does not collect, store, or require any
+    personal information such as name, email address, phone number, or login
+    credentials.
+  </p>
+  <p>
+    The application can be used without user registration or account creation.
+  </p>
+
+  <h2>Advertising (Google AdMob)</h2>
+  <p>
+    This application uses <strong>Google AdMob</strong> to display advertisements.
+  </p>
+  <p>
+    AdMob may collect certain non-personal information automatically, including:
+  </p>
+  <ul>
+    <li>Device information</li>
+    <li>Advertising ID</li>
+    <li>Approximate location</li>
+    <li>App usage data</li>
+  </ul>
+  <p>
+    This data is used to provide and improve advertising services.
+  </p>
+  <p>
+    Google’s use of advertising data is governed by its Privacy Policy:
+    <br>
+    <a href="https://policies.google.com/privacy" target="_blank">
+      https://policies.google.com/privacy
+    </a>
+  </p>
+
+  <h2>Cookies</h2>
+  <p>
+    Third-party services such as AdMob may use cookies or similar technologies
+    to personalize or improve ads.
+  </p>
+
+  <h2>Data Security</h2>
+  <p>
+    We do not collect or store personal user data. Any data collected by
+    third-party services is handled according to their own privacy policies.
+  </p>
+
+  <h2>Children’s Privacy</h2>
+  <p>
+    This application is not specifically directed at children under the age of 13.
+    We do not knowingly collect personal information from children.
+  </p>
+
+  <h2>Changes to This Privacy Policy</h2>
+  <p>
+    We may update this Privacy Policy from time to time. Any changes will be
+    posted on this page.
+  </p>
+
+  <h2>Contact Us</h2>
+  <p>
+    If you have any questions about this Privacy Policy, please contact us at:
+    <br>
+    <strong>[Your Email Address]</strong>
+  </p>
+
+  <footer>
+    © 2026 [Your App Name]. All rights reserved.
+  </footer>
+
+</div>
+
 </body>
 </html>
+
