--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
   <p><strong>Last updated:</strong> January 17, 2026</p>
 
   <p>
-    This Privacy Policy describes how <strong>[Your App Name]</strong> handles
+    This Privacy Policy describes how <strong>[Connect4 app]</strong> handles
     information when you use our mobile application.
   </p>
 
   <h2>Information Collection and Use</h2>
   <p>
-    <strong>[Your App Name]</strong> does not collect, store, or require any
+    <strong>[Connect4 app]</strong> does not collect, store, or require any
     personal information such as name, email address, phone number, or login
     credentials.
   </p>
@@ -105,11 +105,11 @@
   <p>
     If you have any questions about this Privacy Policy, please contact us at:
     <br>
-    <strong>[Your Email Address]</strong>
+    <strong>[m.zouanti@gmail.com]</strong>
   </p>
 
   <footer>
-    © 2026 [Your App Name]. All rights reserved.
+    © 2026 [Connect4]. All rights reserved.
   </footer>
 
 </div>
